--- a/initial/Jenkinsfile
+++ b/initial/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         }
         stage('Build') {
             steps {
-                dir("/var/lib/jenkins/workspace/maven-project/gs-maven/initial") {
+                dir("/var/lib/jenkins/workspace/maven-project/gs-maven/initial/pom.xml") {
                 sh 'mvn -B -DskipTests clean package'
                 }
             }
